--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -5,7 +5,6 @@
     font-style: normal;
     font-display: fallback;
 }
-
 @font-face {
     font-family: "bb";
     src: url("../fonts/Barlow-Bold.woff2") format("woff2"), url("../fonts/Barlow-Bold.woff") format("woff");
@@ -13,7 +12,6 @@
     font-style: normal;
     font-display: fallback;
 }
-
 @font-face {
     font-family: "l";
     src: url("../fonts/LaloGroteskRegular.woff2") format("woff2"),
@@ -84,6 +82,14 @@
     font-family: "utmi";
     src: url("../fonts/UTMImpact.woff2") format("woff2"),
         url("../fonts/UTMImpact.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+    font-display: fallback;
+}
+@font-face {
+    font-family: "tnrd";
+    src: url("../fonts/TimesNewRomanPSMT.woff2") format("woff2"),
+        url("../fonts/TimesNewRomanPSMT.woff") format("woff");
     font-weight: normal;
     font-style: normal;
     font-display: fallback;
